--- a/src/app/components/blogshome/blogshome.component.css
+++ b/src/app/components/blogshome/blogshome.component.css
@@ -10,6 +10,15 @@
     background-size: cover;
   }
 
+  p button{
+    margin: 10px;
+    background-color: #001f3f;
+    color: white;
+    
+    height: 40px;
+    border: 2px solid black ;
+  }
+
 
   .center {
     margin: auto;
@@ -39,4 +48,9 @@
 
   button:focus{
     background-repeat: repeat;
+  }
+
+  .card{
+    border: 4px solid #001f3f;
+    border-radius: 0px 25px 0px 25px;
   }
