Changed dummy text in the home page

--- a/src/app/components/home-care/home-care.component.html
+++ b/src/app/components/home-care/home-care.component.html
@@ -29,7 +29,7 @@
             Qualified, professional, trustworthy, kind, and dependable. We treat all of our
             patients as individuals, and we understand that we’re only as good as the caregivers who work with us and
             who
-            serve our clients in care. We are pleased to serve clients throughout the Halifax area of Nova Scotia.
+            serve our clients in care. We are pleased to serve clients throughout the Canada.
         </p>
         <p>
             We’re serious about the service we provide to seniors and others in our care. We’re diligent when it comes
@@ -42,7 +42,7 @@
         <p>
             We appreciate the responsibility that comes with our very hands-on role of client care. We are proud to
             offer
-            our services to clients across the Halifax area of Nova Scotia, including Dartmouth, Bedford and Sackville.
+            our services to clients across various provinces in Canada.
             We
             know that when we treat our care providers with kindness and respect, it will be reflected in the care they
             provide for our clients.
