--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,47 +1,42 @@
 /* @author Swarali Ghalwadkar <swarali.ghalwadkar@dal.ca> */
 
-#button{
+#button {
     background: #ffe743;
-    border: 4px solid #001F3F;
+    border: 4px solid #001f3f;
     color: black;
     font-size: 20px;
     font-weight: 600;
-  
-    font-family:Helvetica;
+
+    font-family: Helvetica;
     height: fit-content;
-    transition: transform .2s;
+    transition: transform 0.2s;
     border-radius: 18px 1px 18px 1px;
 }
 
-h1{
-  font-weight: 600;
+h1 {
+    font-weight: 600;
 }
 
-#button:hover{
-  transform: scale(1.1);
+#button:hover {
+    transform: scale(1.1);
 }
 
-.section-0{
-  margin-top: 150px;
-}  
-.carousel{
-height: fit-content;
+.section-0 {
+    margin-top: 150px;
+}
+.carousel {
+    height: fit-content;
 }
 
-.section-3{
-margin-top: 130px;
-padding-left:20px;
-padding-right:20px;
-
+.section-3 {
+    margin-top: 130px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-
-#nursing-image{
-  height: 300px;
+#nursing-image {
+    height: 300px;
 }
-
-
-
 
 /* .card{
 transform: translate3d(-1056px, 0px, 0px);
@@ -49,32 +44,29 @@ transform: translate3d(-1056px, 0px, 0px);
     width: 3872px;
 } */
 
-
-.section-4{
-  margin-top: 100px;
+.section-4 {
+    margin-top: 100px;
 }
 
-#image-1{
-  transform: unset;
+#image-1 {
+    transform: unset;
 }
-.container-fluid{
-
-  padding: 40px;
-  
+.container-fluid {
+    padding: 40px;
 }
 
-#doctor-card{
-  border-radius: 25px;
-  border: 1px solid grey;
-  border-bottom: 7px solid #001F3F;
+#doctor-card {
+    border-radius: 25px;
+    border: 1px solid grey;
+    border-bottom: 7px solid #001f3f;
 }
 
-#image-2{
-  padding: 15px;
+#image-2 {
+    padding: 15px;
 }
 
-.content-5{
-  padding: 15px;
+.content-5 {
+    padding: 15px;
 }
 
 /* .container{
@@ -83,192 +75,162 @@ transform: translate3d(-1056px, 0px, 0px);
   align-self: center;
 } */
 
-#content1{
-
-  position: absolute;
-  padding-top: 70px;
-  font-family: Arial;
-     
-  
-     
+#content1 {
+    position: absolute;
+    padding-top: 70px;
+    font-family: Arial;
 }
-.card{
-  background-image: linear-gradient( #001F3F, #001F3F );
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: 0% 100%;
-  transition: background-size .5s, color .5s;
-  border-bottom: 6px solid #001F3F;
-   
-  
+.card {
+    background-image: linear-gradient(#001f3f, #001f3f);
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: 0% 100%;
+    transition: background-size 0.5s, color 0.5s;
+    border-bottom: 6px solid #001f3f;
 
-    
-  
     vertical-align: middle;
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
-  
-  
-
 }
 
-.card:hover{
-  
-  background-size: 100% 100%;
-  color: #fff; 
-
+.card:hover {
+    background-size: 100% 100%;
+    color: #fff;
 }
 
-
-
-#content2{
-  position: absolute;
-  padding-top: 80px;
-  font-family: Arial;
-
+#content2 {
+    position: absolute;
+    padding-top: 80px;
+    font-family: Arial;
 }
 
-#content3{
-  position: absolute;
-  padding-top: 80px;
-  font-family: Arial;
-  padding-left: 890px;
- 
-   
+#content3 {
+    position: absolute;
+    padding-top: 80px;
+    font-family: Arial;
+    padding-left: 890px;
 }
 
-#heading{
-  color: black;
-font-size: 35px;
-  font-weight: 800;
-  
-
+#heading {
+    color: black;
+    font-size: 35px;
+    font-weight: 800;
 }
 
-
-
-
-#section-2{
-  margin-top: 130px;
+#section-2 {
+    margin-top: 40px;
 }
 
-
-.container{
-  text-align: center;
-  align-content: center;
-  align-self: center;
-  
+.container {
+    text-align: center;
+    align-content: center;
+    align-self: center;
 }
 
-#para{
-  font-size: 17px;
-  font-weight: 500px;
+#para {
+    font-size: 17px;
+    font-weight: 500px;
 }
-#doctor-image{
-  padding: 1px;
-  border-radius: 25px;
-}
-
-#image{
-  min-height: 500px;
+#doctor-image {
+    padding: 1px;
+    border-radius: 25px;
 }
 
+#image {
+    min-height: 500px;
+}
 
-#hello{
-    background:#ffe743;
-    border: 4px solid #001F3F;
+#hello {
+    background: #ffe743;
+    border: 4px solid #001f3f;
     color: black;
     font-size: 24px;
     font-weight: 800;
 
-    
-    font-family:Helvetica;
+    font-family: Helvetica;
     height: fit-content;
-    transition: transform .2s;
+    transition: transform 0.2s;
     border-radius: 18px 1px 18px 1px;
 }
 
-hello:hover{
-  transform: scale(1.5);
+hello:hover {
+    transform: scale(1.5);
 }
 
-#nursing-button{
-  transform: scale(1.1);
+#nursing-button {
+    transform: scale(1.1);
 }
-#nursing-button{
-    transition: transform .2s;
+#nursing-button {
+    transition: transform 0.2s;
     background: #ffe743;
-    border: 4px solid #001F3F;
+    border: 4px solid #001f3f;
     color: black;
     font-size: 24px;
     font-weight: 600;
     width: 410px;
-    font-family:Helvetica;
+    font-family: Helvetica;
     height: fit-content;
 
     border-radius: 18px 1px 18px 1px;
-
 }
 
-#read-more{
-
+#read-more {
     background: #ffe743;
-        border: 4px solid #001F3F;;
-        color: black;
-  
-        font-weight: 600;
-     
-        font-family:Helvetica;
-        height: fit-content;
-        transition: transform .2s;
-        border-radius: 18px 1px 18px 1px;
-    
+    border: 4px solid #001f3f;
+    color: black;
+
+    font-weight: 600;
+
+    font-family: Helvetica;
+    height: fit-content;
+    transition: transform 0.2s;
+    border-radius: 18px 1px 18px 1px;
 }
 
-#read-more:hover{
-  transform: scale(1.1);
+#read-more:hover {
+    transform: scale(1.1);
 }
 .flip-card {
-  background-color: transparent;
- height: 100%;
- width:100%;
-  border: 1px solid #f1f1f1;
-
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    border: 1px solid #f1f1f1;
 }
 
 /* This container is needed to position the front and back side */
 .flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 600%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
+    position: relative;
+    width: 100%;
+    height: 600%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
 /* Position the front and back side */
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
 }
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-  background-color: #bbb;
-  color: black;
+    background-color: #bbb;
+    color: black;
 }
 
 /* Style the back side */
 .flip-card-back {
-  background-color: dodgerblue;
-  color: white;
-  transform: rotateY(180deg);
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateY(180deg);
 }
