--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -8,18 +8,16 @@
           <div class="col-lg-4 col-md-12  col-sm-12 col-xs-12">
             <div class="container">
               <div style="position:absolute ; margin-top:35px" class="text">
-                <p style="color: black;font-weight:700 ;font-size:18px">Are you confused about your symptoms? Check out
-                  our unique and
-                  <br> beneficial feature that selects a
-                  doctor
-                  for you. </p>
+                <p style="color: black;font-weight:700 ;font-size:18px">Are you confused about your symptoms and unsure
+                  about what kind of doctor to visit? We can help you with that by recommending a doctor that's the best
+                  for you </p>
                 <br>
                 <button id="button" [routerLink]="['/suggest']">SUGGEST A DOCTOR</button>
               </div>
             </div>
           </div>
         </div>
-        <img style="width:inherit ; height:300px;" class="img-responsive" src="./assets/pic1.jpg">
+        <img style="width:inherit ; height:300px;" class="img-responsive" src="./assets/banner.jpg">
       </div>
     </div>
   </div>
@@ -32,9 +30,11 @@
   </div>
 
   <br>
-  <div id="hi">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt<br> ut labore
-    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation<br> ullamco laboris nisi ut aliquip ex
-    ea commodo consequat.</div>
+  <div id="hi">Healthhub provides a platform for doctors to expand their patients base and reach out to more and
+    more new
+    patients. The application is not only confined to patients and doctors, but general users can use the platform
+    to
+    learn more about health topics from experienced doctors and physicians.</div>
   <br>
   <br>
   <br>
@@ -46,22 +46,22 @@
       <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
         <img src="./assets/aboutus.PNG">
         <h2>About Us</h2>
-        <p>Lorem ipsum dolor sit consectetur<br> adipiscing elit sed do.</p>
+        <p>Healthhub is the one-stop shop for all your health needs</p>
       </div>
       <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
         <img src="./assets/our mission.PNG">
         <h2>Our Mission</h2>
-        <p>Lorem ipsum dolor sit consectetur<br> adipiscing elit sed do.</p>
+        <p>To allow quick access to various health realted solutions</p>
       </div>
       <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
         <img src="./assets/our vision.PNG">
         <h2>Our Vision</h2>
-        <p>Lorem ipsum dolor sit consectetur<br> adipiscing elit sed do.</p>
+        <p>To inspire healthier communities by connecting people to medical professionals</p>
       </div>
       <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
         <img src="./assets/ourhistory.PNG">
         <h2>Our History</h2>
-        <p>Lorem ipsum dolor sit consectetur<br> adipiscing elit sed do.</p>
+        <p>The newest organization in the online health industry</p>
       </div>
       <!-- </div> -->
 
@@ -91,19 +91,19 @@
       </div>
       <br>
       <div id="para">
-        <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac sapien dolor. Maecenas a enim ac velit
-          vulputate efficitur. Integer bibendum dapibus risus sit amet elementum. Nullam vulputate accumsan sapien,
-          vel faucibus lorem consectetur vel.<br>
-          Integer dapibus augue sed ullamcorper tempor. Pellentesque odio elit, maximus sed est in, lobortis facilisis
-          neque.
-          <br> Mauris eu mi et nibh scelerisque malesuada. Nulla fringilla ultrices elit.
-          <br> Cras tristique eu est quis hendrerit.<br> Etiam accumsan erat vitae commodo commodo.
-          <br> Vestibulum euismod mattis sem, eget consequat sem pharetra eget.
-          <br> Aliquam et quam mi.</P>
+        <p>Qualified, professional, trustworthy, kind, and dependable. We treat all of our patients as individuals, and
+          we
+          understand that we’re only as good as the caregivers who work with us and who serve our clients in care. We
+          are pleased
+          to serve clients throughout the Canada.Our employees have set an enviable standard for live-in caregivers that
+          has garnered much praise from our clients. They
+          offer a true level of consistency and comfort with the elederly on rotation, and they really become part of
+          the family.</p>
       </div>
       <br>
       <div>
-        <a id="nursing-button" class="waves-effect waves-light btn">BOOK AN APPOINTMENT</a></div>
+        <a id="nursing-button" class="waves-effect waves-light btn" [routerLink]="['/homeCare']">Schedule Homecare</a>
+      </div>
       <br>
       <br>
     </div>
@@ -111,219 +111,10 @@
 </div>
 
 
-<div data-aos="fade-left" class="section-4">
-  <div class="container">
-    <h1>OUR SERVICES</h1>
-  </div>
-  <div class="container-fluid">
-
-    <div class="row">
-
-      <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
-        <div class="card">
-          <img id="image-2" src="./assets/doctor.jpg">
-          <div class="content-5">
-            <h2>DENTISTRY</h2>
-
-            <p>Lorem ipsum dolor sit consectetur<br> adipiscing elit sed do.</p>
-            <a id="read-more" class="waves-light waves-effect btn">Read More</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
-        <div class="card">
-          <img id="image-2" src="./assets/doctor.jpg">
-          <div class="content-5">
-            <h2>DERMATOLOGY</h2>
-
-            <p>Lorem ipsum dolor sit consectetur<br> adipiscing elit sed do.</p>
-            <a id="read-more" class="waves-light waves-effect btn">Read More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
-        <div id="card-2" class="card">
-          <img id="image-2" src="./assets/doctor.jpg">
-
-          <div class="content-5">
-            <h2>RADIOLOGY</h2>
-
-            <p>Lorem ipsum dolor sit consectetur<br> adipiscing elit sed do.</p>
-            <a id="read-more" class="waves-light waves-effect btn">Read More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
-        <div class="card">
-
-          <img id="image-2" src="./assets/doctor.jpg">
-          <div class="content-5">
-            <h2>SURGERY</h2>
-
-            <p>Lorem ipsum dolor sit consectetur<br> adipiscing elit sed do.</p>
-            <a id="read-more" class="waves-light waves-effect btn">Read More</a>
-          </div>
-        </div>
-      </div>
-    </div>
 
 
-  </div>
-
-</div>
-<!-- ********* Meet our doctors section******** -->
 
 
-<div class="parallax-2">
-  <div class="container">
-    <br>
-    <br>
-    <br>
-
-    <div id="heading">
-      <h1><b>MEET OUT DOCTORS</b></h1>
-    </div>
-    <br>
-    <div id="para">
-      <P><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac sapien dolor. Maecenas a enim ac velit
-          vulputate efficitur. Integer bibendum dapibus risus sit amet elementum. Nullam vulputate accumsan sapien,
-          vel faucibus lorem consectetur vel.<br>
-          Integer dapibus augue sed ullamcorper tempor. Pellentesque odio elit, maximus sed est in, lobortis facilisis
-          neque.
-          <br> Mauris eu mi et nibh scelerisque malesuada. Nulla fringilla ultrices elit.
-          <br> Cras tristique eu est quis hendrerit.<br> Etiam accumsan erat vitae commodo commodo.
-          <br> Vestibulum euismod mattis sem, eget consequat sem pharetra eget.
-          <br> Aliquam et quam mi.</b></P>
-    </div>
-    <br>
-
-  </div>
-
-  <!-- ********************* -->
-  <div class="section-4">
-
-    <div class="container">
-
-      <div class="row">
-
-        <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-          <div id="doctor-card" class="card">
-            <img id="doctor-image" src="./assets/doctor1.PNG">
-            <div class="content-5">
-              <h3>Peter Pan</h3>
-
-              <h5>Radiologist</h5>
-              <br>
-              <a id="read-more" [routerLink]="['/feedback']" class="waves-light waves-effect btn">Book An
-                Appoinment</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
-          <div id="doctor-card" class="card">
-            <img id="doctor-image" src="./assets/doctor2.PNG">
-            <div class="content-5">
-              <h3>Harry Styles</h3>
-
-              <h5>Radiologist</h5>
-              <br>
-              <a id="read-more" class="waves-light waves-effect btn">Book An Appoinment</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
-          <div id="doctor-card" class="card">
-            <img id="doctor-image" src="./assets/doctor3.PNG">
-
-            <div class="content-5">
-              <h3>Liam Payne</h3>
-
-              <h5>Radiologist</h5>
-              <br>
-              <a id="read-more" class="waves-light waves-effect btn">Book An Appoinment</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
-          <div id="doctor-card" class="card">
-
-            <img id="doctor-image" src="./assets/doctor4.PNG">
-            <div class="content-5">
-              <h3>Louis Tomlinson</h3>
-
-              <h5>Cardiologist</h5>
-              <br>
-              <a id="read-more" class="waves-light waves-effect btn">Book An Appoinment</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <br>
-
-
-      <div class="row">
-
-        <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
-          <div id="doctor-card" class="card">
-            <img id="doctor-image" src="./assets/doctor1.PNG">
-            <div class="content-5">
-              <h3>Peter Pan</h3>
-
-              <h5>Radiologist</h5>
-              <br>
-              <a id="read-more" class="waves-light waves-effect btn">Book An Appoinment</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
-          <div id="doctor-card" class="card">
-            <img id="doctor-image" src="./assets/doctor2.PNG">
-            <div class="content-5">
-              <h3>Harry Styles</h3>
-
-              <h5>Radiologist</h5>
-              <br>
-              <a id="read-more" class="waves-light waves-effect btn">Book An Appoinment</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
-          <div id="doctor-card" class="card">
-            <img id="doctor-image" src="./assets/doctor3.PNG">
-
-            <div class="content-5">
-              <h3>Liam Payne</h3>
-
-              <h5>Radiologist</h5>
-              <br>
-              <a id="read-more" class="waves-light waves-effect btn">Book An Appoinment</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-12 col-x-12">
-          <div id="doctor-card" class="card">
-
-            <img id="doctor-image" src="./assets/doctor4.PNG">
-            <div class="content-5">
-              <h3>Louis Tomlinson</h3>
-
-              <h5>Cardiologist</h5>
-              <br>
-              <a id="read-more" class="waves-light waves-effect btn">Book An Appoinment</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-    </div>
-
-  </div>
-
-</div>
 
 
 
@@ -338,12 +129,20 @@
           <h3>HEALTHY DRINKS</h3>
           <br>
           <br>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer hendrerit, eros vitae efficitur
-            ullamcorper, enim eros hendrerit elit, at venenatis velit mauris ac augue.<br> Praesent nec consectetur
-            arcu. Maecenas sagittis mi eros, vitae auctor libero pellentesque non.<br> Mauris a leo posuere,
-            sollicitudin tellus sed, faucibus libero. </p>
-          <a id="read-more" style="font-size: x-large;
-padding: inherit;" class="waves-effect waves-light">READ MORE</a>
+          <p>Many people think that with proper nutrition they will bring sufficient amount of all the vitamins and
+            minerals in their
+            body. But, unfortunately, the food we eat is already so much processed that we only get reduced amounts of
+            these
+            substances with it. When we prepare food we can contribute to reducing the amount of vitamins and minerals,
+            e.g. with
+            cooking, exposure to air (oxygen), light (UV light)... It is possible to eat sufficient amounts of vitamins
+            and minerals
+            with dietary supplements, but it is even better that you spice up your menu with nuMe products. You will
+            find a table of
+            nutritional values in the description for each product, indicating how many vitamins and minerals (among
+            other
+            ingredients) he is containing.
+          </p>
         </div>
 
         <div class="col-xs-12  col-sm-12 col-md-6 col-lg-5">
@@ -360,10 +159,11 @@ padding: inherit;" class="waves-effect waves-light">READ MORE</a>
 
 <!-- Code section for corona-virus alert  -->
 <div class="section-0">
-  <div style="background-image:url(./assets/corona.gif);height: 150px;text-align: center;" class="fluid-container">
+  <div style="background-image:url(../../../assets/covid_banner.png);height: 150px;text-align: center;"
+    class="fluid-container">
     <div class="row  justify-content-center">
       <div class="col">
-        <p style="font-size: 31px;font-weight: 800 ;color:whitesmoke;margin-top: 60px;">CORONA VIRUS UPDATE ! &nbsp;
+        <p style="font-size: 31px;font-weight: 600 ;color:whitesmoke;margin-top: 60px;">COVID-19 UPDATE -
           &nbsp; 23 NEW CASES IN CANADA !</p>
       </div>
     </div>
