Removed like share buttons in blogs and changed styles

--- a/src/app/components/write-blog/write-blog.component.html
+++ b/src/app/components/write-blog/write-blog.component.html
@@ -152,4 +152,13 @@
         background: gainsboro;
         border: 2px solid lavender;
     }
+
+    button {
+        margin: 10px;
+        background-color: #001f3f;
+        color: white;
+
+        height: 40px;
+        border: 2px solid black;
+    }
 </style>
