--- a/src/app/components/insuranceitem/insuranceitem.component.html
+++ b/src/app/components/insuranceitem/insuranceitem.component.html
@@ -1,7 +1,7 @@
 <!-- /* @author Vidip Malhotra <vidip.malhotra@dal.ca> */ -->
 
 <div class="container-fluid" style="width: 90%;">
-  <h4 style="margin-top:1%; text-align: center;">Specific Health Plans as per your Profile</h4>
+  <h3 style="margin-top:1%; text-align: center;">Specific Health Plans as per your Profile</h3>
   <div class="row">
     <div class="col-sm-8" style="background-color: #f6f7f8;">
       <div *ngFor="let data of filteredinsuranceData">
@@ -16,12 +16,14 @@
                   <img src="assets/insurance.jpg" alt="image" />
                 </div>
                 <div class="col-sm-8">
-                  <h5 class="card-title">{{data.insurancename}} &nbsp;&nbsp;&nbsp;&nbsp;<span
-                      class="badge badge-info">{{data.type}}</span></h5>
+                  <h3 class="card-title">{{data.insurancename}} &nbsp;&nbsp;&nbsp;&nbsp;<span
+                      class="badge badge-info">{{data.type}}</span></h3>
                   <p class="card-text">{{data.insurancedetails}}</p>
-                  <h4 style="text-align: right;">Price: CAD {{data.premium}} <span style="font-size: 12px;">per
-                      {{data.payduration}}</span></h4>
-                  <a href="#" class="btn btn-primary">Take me to Company's Website</a>
+                  <h2 style="text-align: right;"><span style="font-size: 16px; color:cadetblue;">Dental Care Coverage: {{data.dentalcare}} &nbsp;&nbsp;&nbsp;</span>Price: CAD {{data.premium}} <span style="font-size: 12px;">per month
+                    </span></h2>
+                      <button type="button" class="btn btn-primary" (click)="interested(data.Id)" [hidden]="!hidebutton">Interested</button>
+                      <br>
+                     <p id="{{data.Id}}" *ngIf="Index == data.Id">{{interested_message}}</p> 
                 </div>
               </div>
             </div>
@@ -29,19 +31,20 @@
         </div>
         <br>
       </div>
+      <p>{{logincheck}}</p><p>{{error_message}}</p>
 
     </div>
     <div class="col-sm-4">
       <div class="card" style="width: 18rem;">
-        <img src="assets/usericon.png" class="card-img-top" alt="...">
+        <img src="assets/{{imageurl}}" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Your Profile</h5>
+          <h3 class="card-title">Your Profile</h3>
           <p class="card-text"><i class="fa fa-th"></i>&nbsp;{{recommendation}}</p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item"><i class="fa fa-user-circle"></i>&nbsp;{{username}}</li>
-          <li class="list-group-item"><i class="fa fa-user-circle"></i>&nbsp;Age Group: {{age}}</li>
-          <li class="list-group-item"><i class="fa fa-money"></i>&nbsp;Yearly Salary: CAD {{salary}}</li>
+          <li class="list-group-item"><i class="fa fa-user-circle"></i>&nbsp;{{userData[0].email}}</li>
+          <li class="list-group-item"><i class="fa fa-user-circle"></i>&nbsp;Age Group: {{userData[0].age}}</li>
+          <li class="list-group-item"><i class="fa fa-money"></i>&nbsp;Yearly Salary: CAD {{userData[0].salary}}</li>
         </ul>
         <div class="card-body">
           <a href="/insurance" class="card-link"><i class="fa fa-edit"></i>Edit Profile</a>
