--- a/src/app/components/insurancefinder/insurancefinder.component.html
+++ b/src/app/components/insurancefinder/insurancefinder.component.html
@@ -214,6 +214,7 @@
             </select>
           </div>
         </form>
+        <button type="button" class="btn btn-success" style="width:150px;" (click)="refresh()">Refresh</button>
       </div>
     </div>
   </div>
