--- a/src/app/components/search-result/search-result.component.html
+++ b/src/app/components/search-result/search-result.component.html
@@ -4,7 +4,7 @@
     <h2>Your search result: {{keyword}}</h2>
     <hr>
 </div>
-<div *ngIf="result.length == 0" style="text-align: center;">
+<div *ngIf="resultSize == 0" style="text-align: center;">
     <h3>No results</h3>
 </div>
 <div style="text-align: center; " class="container">
