- Only doctors can write blogs - Added author tags

--- a/src/app/components/blogshome/blogshome.component.html
+++ b/src/app/components/blogshome/blogshome.component.html
@@ -216,7 +216,7 @@
           Blog</button>
       </mat-card-actions>
     </mat-card> -->
-<div style="margin-top: 50px; " class="container">
+<div *ngIf="isDoctor" style="margin-top: 50px; " class="container">
   <div class="row justify-content-center">
     <div style="text-align: center;" class="col">
       <p style="font-size: 25px;"> You can also create your own blog</p>
