--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,5 @@
+<!-- /* @author Avinash Gazula <agazula@dal.ca> */ -->
+
 <footer fxLayout="column">
   <div class="copyright" fxLayout="row" fxLayout.lt-sm="column">
     <div style="margin-left: 2%;" fxLayout="row">
