--- a/src/app/components/suggestdoctor/suggestdoctor.component.html
+++ b/src/app/components/suggestdoctor/suggestdoctor.component.html
@@ -74,7 +74,7 @@
                     <div fxLayout="row" fxLayout.lt-md="column" class="row mycolumn ">
 
                         <div class="col-3 ">
-                            <img mat-card-image src={{doctor.image}}
+                            <img mat-card-image src={{doctor.image_url}}
                                 style="height: 150px; width: 150px; border-radius: 8px; ">
                         </div>
                         <div class="col-5 ">
